# esp32-proj

./: CMakeLists.txt  README.md
components/hello_world/: CMakeLists.txt  hello_world.c
components/hello_world/include/: hello_world.h
components/ota_lib/: CMakeLists.txt  ota_lib.c
components/ota_lib/include/: ota_lib.h
components/ota_lib/server_certs/: ca_cert.pem  ca_key.pem
components/pwm_lib/: CMakeLists.txt  pwm_lib.c
components/pwm_lib/include/: pwm_lib.h
components/wifi_connect/: CMakeLists.txt  wifi_connect.c
components/wifi_connect/include/: wifi_connect.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c
